# SymCalculator

./: README.md
Google_tests/: CMakeLists.txt
Google_tests/tests/: AdditionTests.cpp  MultiplicationTests.cpp  SubtractionTests.cpp
SymbolicArithmetic/: RealNumber.cpp  RealNumber.h  StringOperation.cpp  StringOperation.h  SymbolOperation.cpp  SymbolOperation.h
src/SymbolicArithmetic/: RealNumber.cpp  RealNumber.h  SymbolOperation.cpp  SymbolOperation.h
